# Fine_CoreBanking

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
accounting_service/: Dockerfile  README.md  pyproject.toml
accounting_service/app/: main.py
accounting_service/app/api/v1/: accounts.py  auth.py  fiscal_years.py  health.py  journals.py  reports.py  users.py
accounting_service/app/core/: audit.py  config.py  exceptions.py  metrics.py  rate_limit.py  redis_pool.py  security.py  telemetry.py
accounting_service/app/data/: plan_templates.py
accounting_service/app/db/: session.py
accounting_service/app/models/: accounting.py  audit.py  auth.py
accounting_service/app/repositories/: accounting.py
accounting_service/app/schemas/: accounting.py  auth.py
accounting_service/app/services/: accounting.py  auth.py  kafka_consumer.py  kafka_producer.py
accounting_service/migrations/: env.py
accounting_service/migrations/versions/: 0002_users_auth.py  0003_audit_log.py  0004_sync_schema.py  0005_journal_codes_bank.py
accounting_service/tests/: conftest.py
accounting_service/tests/api/: test_accounts.py  test_auth.py  test_fiscal_years.py  test_journals.py  test_reports.py  test_users.py
accounting_service/tests/unit/: test_accounting_service.py
frontend/: .env.local  Dockerfile  Dockerfile.prebuilt  Dockerfile.prebuilt.dockerignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/accounts/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/fiscal-years/: page.tsx
frontend/app/journals/: page.tsx
frontend/app/journals/new/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reports/balance-sheet/: page.tsx
frontend/app/reports/bceao/: page.tsx
frontend/app/reports/cash-flow/: page.tsx
frontend/app/reports/credit-portfolio/: page.tsx
frontend/app/reports/deposits/: page.tsx
frontend/app/reports/general-ledger/: page.tsx
frontend/app/reports/income-statement/: page.tsx
frontend/app/reports/journal-centralizer/: page.tsx
frontend/app/reports/trial-balance/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/settings/plan-setup/: page.tsx
frontend/app/users/: page.tsx
frontend/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/components/ui/: ExportButtons.tsx  Spinner.tsx
frontend/context/: auth.tsx
frontend/lib/: auth.ts  utils.ts
frontend/lib/api/: accounting.ts  auth.ts  reporting.ts
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
reporting_service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
reporting_service/app/: main.py
reporting_service/app/api/v1/: health.py  reports.py
reporting_service/app/core/: config.py  exceptions.py  metrics.py  redis_pool.py  security.py  telemetry.py
reporting_service/app/db/: session.py
reporting_service/app/repositories/: reporting.py
reporting_service/app/schemas/: reports.py
reporting_service/app/services/: kafka_consumer.py  reporting.py
reporting_service/app/utils/: cache.py  exporters.py
reporting_service/docs/: postman_collection.json
reporting_service/scripts/: create_readonly_user.sql
reporting_service/tests/fixtures/: db_models.py
reporting_service/tests/integration/: test_api.py
reporting_service/tests/unit/: test_reporting_service.py
scripts/: init_db.sql  reset_dev.sh
(+1 files in other folders)
