[tool.poetry]
name = "accounting-service"
version = "1.0.0"
description = "Microservice Comptabilité — Core Banking System"
authors = ["Core Banking Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.30.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
aiokafka = "^0.12.0"
redis = {extras = ["asyncio"], version = "^5.0.4"}
structlog = "^24.1.0"
babel = "^2.15.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = ">=3.0.0,<4.0.0"
python-multipart = "^0.0.9"
slowapi = "^0.1.9"
pdfplumber = "^0.11.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-api = "^1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
opentelemetry-instrumentation-redis = "^0.45b0"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
omit = ["app/db/session.py", "app/core/config.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
